devops: update Roll Next schedule to run only once a week (#1983)
Changed the schedule for the Roll Next workflow to run every Wednesday instead of every weekday.

--- a/.github/workflows/roll-next.yml
+++ b/.github/workflows/roll-next.yml
@@ -2,9 +2,8 @@ name: Roll Next
 on:
   workflow_dispatch:
   schedule:
-    # Every weekday at 10:05 UTC (Monday to Friday)
-    - cron: "5 10 * * 1-5"
-
+    # Every Wednesday at 10:05 UTC
+    - cron: "5 10 * * 3"
 jobs:
   roll-docs:
     name: Roll Playwright to ToT
